<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/menu_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>
    <item
        android:id="@+id/menu_profil"
        android:title="@string/profil"
        android:icon="@drawable/ic_account"/>
    <item
        android:id="@+id/menu_shift"
        android:title="@string/shift"
        android:icon="@drawable/ic_time"/>
<!--    <item-->
<!--        android:id="@+id/menu_lokasi"-->
<!--        android:title="@string/lokasi"-->
<!--        android:icon="@drawable/ic_location"/>-->
    <item
        android:id="@+id/menu_section"
        android:title="@string/section"
        android:icon="@drawable/ic_section"/>
    <item
        android:id="@+id/menu_karyawan"
        android:title="@string/karyawan"
        android:icon="@drawable/ic_karyawan"/>
    <item
        android:id="@+id/menu_absensi"
        android:title="@string/absensi"
        android:icon="@drawable/ic_absensi"/>
    <item
        android:id="@+id/menu_absen"
        android:title="@string/absen"
        android:icon="@drawable/ic_absen"/>
    <item
        android:id="@+id/menu_absensiku"
        android:title="@string/absensiku"
        android:icon="@drawable/ic_absensi"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
</menu>
