<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".absensi.DetailAbsenActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
        <com.faltenreich.skeletonlayout.SkeletonLayout
            android:id="@+id/skeletonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/sp_bulan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="Bulan"
                        app:entries="@array/bulan_nama"/>

                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/sp_tahun"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="Tahun"
                        app:entries="@array/tahun"/>

                    <Button
                        android:id="@+id/btn_tampilkan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_blue"
                        android:text="@string/tampilkan"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="@string/nama"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_nama_karyawan"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"
                                android:textColor="@color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="@string/divisi"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_nama_divisi"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"
                                android:textColor="@color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.4"
                                android:text="@string/shift"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_nama_shift"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"
                                android:textColor="@color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#904C4A4A" />

                        <TextView
                            android:id="@+id/tv_absensi_bulan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:padding="10dp"
                            android:text="Absensi Bulan : ...."
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_absensi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
                <LinearLayout
                    android:id="@+id/lyt_no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_document"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"
                        android:text="Tidak ada data absen"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
        </com.faltenreich.skeletonlayout.SkeletonLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>